// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ball when checked should have aria-checked=true 1`] = `
<button
  aria-checked="true"
  class="svelte-1q3vljt"
  role="switch"
>
  <div
    class="svelte-1q3vljt"
  />
</button>
`;

exports[`Ball when not checked should have aria-checked=false 1`] = `
<button
  aria-checked="false"
  class="svelte-1q3vljt"
  role="switch"
>
  <div
    class="svelte-1q3vljt"
  />
</button>
`;
